--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,6 +1,8 @@
 <%- include('partials/_header.ejs'); -%>
 
 <%- include('partials/_navigation.ejs'); -%>
+
+<% if(user) { %> 
 	
 	<div class="all-title-box">
 		<div class="container text-center">
@@ -92,5 +94,7 @@
             </div><!-- end row -->
         </div><!-- end container -->
     </div><!-- end section -->
+
+	<% } %>
 
     <%- include('partials/_footer.ejs'); -%>
