--- a/views/partials/_navigation.ejs
+++ b/views/partials/_navigation.ejs
@@ -35,7 +35,7 @@
           </li>
           <% } %>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <li class="nav-item <%= page_name ==='contact' && 'active' %>"><a class="nav-link" href="/contact">Contact</a></li>
           </li>
         </ul>
         <% if(!userIN) { %>
