--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -45,7 +45,7 @@
                   </h2>
                 </div>
                 <div class="course-desc">
-                  <p><%= courses[i].description.substring(0, 20) + "..." %></p>
+                  <p><%= courses[i].description %></p>
                 </div>
               </div>
               <div class="course-meta-bot">
