--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -46,9 +46,7 @@
 					</div><!-- end container -->
 				</div><!-- end section -->
 			<% } %>
-					
 			<% if(user.role==='teacher' ) { %>
-						
 			<div class="all-title-box">
 				<div class="container text-center">
 					<h1>
@@ -56,7 +54,6 @@
 					</h1>
 				</div>
 			</div>
-						
 			<div id="overviews" class="section wb">
 				<div class="container">
 					<div class="row">
@@ -73,22 +70,18 @@
 							<% } %>
 		
 						<% } %>
-									
 						<!-- Modal Button -->
 						<div class="col-lg-12 text-center ">
 							<button class="btn btn-lg btn-warning rounded-0 text-white" href="#"
 								data-toggle="modal" data-target="#addCourse"><span>CREATE NEW
 									COURSE</span></button>
 						</div>
-								
-
 						<div class="col-lg-12 blog-post-single">
 							<div class="blog-author">
 								<div class="author-bio">
 									<h3 class="author_name">COURSE FROM: <%= user.name %></h3>
 								</div>
 							</div>
-							
 						</div><!-- end col -->
 					</div><!-- end row -->
 					<div class="row mt-5">
@@ -98,7 +91,6 @@
 								<div class="image-blog">
 									<img src="/images/blog_1.jpg" alt="" class="img-fluid">
 								</div>
-							
 								<div class="course-br">
 									<div class="course-title">
 										<h2><a href="/courses/<%= courses[i].slug %>" title=""><%= courses[i].name %></a></h2>
@@ -118,7 +110,6 @@
 									</div>
 								</div>
 							</div>
-						
 						</div><!-- end col -->
 <!-- UPDATE Modal -->
 <div class="modal fade" id="updateCourse<%= courses[i]._id %>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -134,7 +125,6 @@
 						<input type="text" name="name" value="<%= courses[i].name %>" class="form-control"  placeholder="Course Name">
 					</div>
 				</div>
-			
 				<div class="form-group">
 					<div class="col-sm-12">
 						<input type="hidden" name="role" class="form-control"  value="<%= user.role %>">
@@ -173,13 +163,10 @@
 </div>
 </div>
 </div>
-									
 						<% } %>
-							
 					</div><!-- end row -->
 				</div><!-- end container -->
 			</div><!-- end section -->
-
 			<!-- ADD Modal -->
 			<div class="modal fade" id="addCourse" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 			<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
@@ -229,11 +216,9 @@
 					</div>
 				</div>
 			</div>
-		
 			</div>
 			</div>
 			</div>
-						
 			<% } %>
 			<% if(user.role==='admin' ) { %>
 				<div class="all-title-box">
@@ -254,7 +239,9 @@
 								</div>
 							</div><!-- end col -->
 						</div><!-- end row -->
+						
 						<div class="row mt-5">
+							<h2>Users</h2>
 							<table class="table">
 								<thead>
 								  <tr>
@@ -278,9 +265,67 @@
 								</tbody>
 							  </table>
 						</div><!-- end row -->
+						<div class="row mt-5">
+							<h2>Categories</h2>
+							<table class="table">
+								<thead>
+								  <tr>
+									<th scope="col">ID#</th>
+									<th scope="col">Name</th>
+									<th scope="col">Add</th>
+									<th scope="col">Delete</th>
+								  </tr>
+								</thead>
+								<tbody>
+							<% for (let i=0; i< categories.length; i++) { %>
+								  <tr>
+									<th scope="row"><%=categories[i]._id %></th>
+									<td><%=categories[i].name %></td>
+									<td><button class="btn btn-lg btn-warning rounded-0 text-white" href="#"
+										data-toggle="modal" data-target="#addCategory"><span>
+											ADD</span></button></td>
+									<td><a href="/categories/<%= categories[i]._id %>?_method=DELETE" 
+										onclick="return confirm('ARE YOU SURE')"
+										class="btn btn-danger rounded-0 text-white"><span>DELETE</span></a></td>
+								  </tr>
+							<% } %>
+								</tbody>
+							  </table>
+						</div><!-- end row -->
 					</div><!-- end container -->
 				</div><!-- end section -->
+							<!-- ADD Modal -->
+			<div class="modal fade" id="addCategory" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+				<div class="modal-content">
+				<div class="modal-body customer-box">
+					<!-- Tab panes -->
+					<div class="tab-content">
+						<div class="tab-pane active" id="Login">
+							<form method="POST" action="/categories" class="form-horizontal">
+								<div class="form-group">
+									<div class="col-sm-12">
+										<input type="text" name="name" class="form-control"  placeholder="Category Name">
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-sm-10">
+										<button type="submit" class="btn btn-light btn-radius btn-brd grd1">
+											Submit
+										</button>
+										<button type="submit" class="btn btn-light btn-radius btn-brd grd1"
+											data-dismiss="modal" aria-hidden="true">
+											Cancel
+										</button>
+									</div>
+								</div>
+							</form>
+						</div>
+					</div>
+				</div>
+				</div>
+				</div>
+				</div>
 			<% } %>
 		<% } %>
-
-								<%- include('partials/_footer'); %> 
+<%- include('partials/_footer'); %>
